# android-parental-control

android-parental-control/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
android-parental-control/manifests/: AndroidManifest.xml
android-parental-control/src/main/aidl/com/example/parentalcontrol/: IMainBridge.aidl  IWatchdogBridge.aidl
android-parental-control/src/main/cpp/: anti_tamper.cpp  native-lib.cpp  sni_parser.cpp  watchdog.cpp
android-parental-control/src/main/cpp/include/: anti_tamper.h  sni_parser.h  watchdog.h
android-parental-control/src/main/kotlin/com/example/parentalcontrol/: AppContextHolder.kt  BlockerActivity.kt  BootReceiver.kt  DefensiveAccessibilityService.kt  DeviceAdminReceiver.kt  ForegroundMonitorService.kt  MainBridgeService.kt  NativeBridge.kt  NotificationHelper.kt  ParentalControlApp.kt  ParentalControlVpnService.kt  PinLockActivity.kt  WatchdogService.kt
android-parental-control/src/main/res/xml/: accessibility_service_config.xml  device_admin_policies.xml
